--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h2{
  font-size: 78px;
  color: red; 
 }
-p{
+.op{
     text-align: center;
     margin-top: 40px;
     color: red;
@@ -42,4 +42,30 @@ h3{
     text-align: center;
     font-size: 38px;
     margin-top: 10px;
+}
+.image{
+    text-align: center;
+    margin-top: 40px;
+}
+.hi{
+    text-align: left;
+    margin-top: 50px;
+    color: #fff;
+    font-size: 34px;
+    margin-right: 100%;
+}
+.hi{
+    width: 1320px;
+    height: 600px;
+    position: relative;
+    background-image: url(images/Vectorrr.png);
+    display: block;
+    margin-left: 10px;
+    fill: linear-gradient(90deg, #0F1035 0%, rgba(7, 2, 17, 0.00) 100%);
+    flex-shrink: 0;
+
+}
+
+.contaner{
+    width: 100%;
 }
