--- a/style.css
+++ b/style.css
@@ -67,5 +67,10 @@ h3{
 }
 
 .contaner{
-    width: 100%;
+    width: 1320px;
+    min-height: 600px;
+    background-image: linear-gradient(rgba(9,0,77,0.65),), url(images/Vectorrr.png);
+    background-size: cover;
+    background-position: center;
+    padding: 10px 8%;
 }
