--- a/style.css
+++ b/style.css
@@ -91,3 +91,17 @@ h3{
     bottom: 0;
     right: 10%;
 }
+.tr{
+    width: 1320px;
+    height: 482px;
+    background-color: #ffeaea;
+    margin-top: 100px;
+    text-align: center;
+}
+.fg{
+    color: red;
+    padding-top: 20px;
+    margin: 10px;
+    font-weight: 800;
+    text-transform: capitalize;
+}
